src/objects/Ownership_Approval_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RPSM Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Ownership_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Email__c</fullName>
        <label>Old Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Owner_RPSM_Email__c</fullName>
        <label>Old Owner RPSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Owner_RPSM__c</fullName>
        <label>Old Owner RPSM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <label>Old Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Ownership Approvals</relationshipLabel>
        <relationshipName>Opportunity_Ownership_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Same_Account_Manager__c</fullName>
        <formula>IF( Opportunity__r.Owner.RPSM_New__r.Username = New_Owner__r.RPSM_New__r.Username , &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Same Account Manager</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Ownership Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Change Complete</value>
        </filters>
        <label>All - Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending RPSM Approval,Pending Ownership Change</value>
        </filters>
        <label>All - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Not</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <label>All - Not submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_rejected</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>All - Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OOA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Ownership Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>